Updated layouts, added footer base styles, and added custom layouts in frontmatter for home/about

--- a/source/about.html.textile
+++ b/source/about.html.textile
@@ -1,6 +1,7 @@
 ---
 title: TODO This is the about page title
 description: TODO This is the about page description
+layout: layout_about
 ---
 
 h1. This is H1 Header
