--- a/source/portfolio.html.textile
+++ b/source/portfolio.html.textile
@@ -1,7 +1,7 @@
 ---
 title: TODO This is the about page title
 description: TODO This is the about page description
-layout: layout_about
+layout: layout_portfolio
 ---
 
 h1. This is H1 Header
