--- a/source/blog/2014-03-23-zen.html.textile
+++ b/source/blog/2014-03-23-zen.html.textile
@@ -1,13 +1,51 @@
 ---
-title: "14"
+title: "Testing Blog Post Feature"
 tags:
   - sometag
 date: "2014-03-23"
 tooltip: "this is an article about Zen Buddhism"
 ---
 
-p. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam viverra urna a quam ornare iaculis. Aliquam a pulvinar elit. Nam nulla lacus, luctus sed sem non, eleifend euismod dui. Fusce sit amet egestas erat, eget tincidunt turpis. Cras sed odio dignissim, facilisis justo in, lobortis eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent mauris lacus, lacinia quis hendrerit in, volutpat ac leo. Morbi eget fermentum mi, non luctus purus. Suspendisse in tortor eu justo dictum tincidunt vitae ut leo.
+p. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
-p. Nam tellus dui, porta et vulputate id, convallis a leo. Aliquam erat volutpat. Donec pulvinar eget mi non vulputate. Nullam porta ligula consectetur iaculis tincidunt. Donec ornare est quis elit euismod mattis. Maecenas sed mi at est posuere feugiat. Duis eget sollicitudin elit. Curabitur at consectetur massa. Pellentesque sem nibh, pretium at enim nec, aliquet dapibus lacus. Curabitur pretium mollis urna, sed rhoncus diam dapibus dignissim.
+h1. This is H1 Header
 
-p. Morbi malesuada sodales mauris, sit amet dignissim erat ullamcorper quis. Curabitur ultrices tincidunt sem ut aliquam. Vestibulum suscipit aliquet lectus eget vestibulum. Praesent lectus metus, ullamcorper at dolor non, tristique vehicula purus. Phasellus porta turpis eu dolor varius, ut vestibulum turpis molestie. Vivamus congue sapien vel consequat euismod. Morbi a est nisl. Donec ultricies est sed massa consequat, sed aliquam felis tempor. Nullam molestie, orci sed dictum faucibus, orci ipsum ultrices tortor, in egestas ligula risus at diam. Sed eu elit suscipit turpis tempor iaculis id ut metus. Aliquam erat volutpat. Proin tempus tempus elit rhoncus aliquam. Donec feugiat scelerisque justo id fringilla. Nam condimentum, odio dignissim fermentum tempor, elit ipsum tempor libero, eu tincidunt enim erat vitae ante.
+h2. This is H2 Header
+
+h3. This is H3 Header
+
+This is a paragraph
+
+*bold* or _italic_ text
+
+"Wikipedia":http://en.wikipedia.org/
+
+|_. First Header |_. Second Header |
+|Content Cell |Content Cell |
+|Content Cell |Content Cell |
+
+bc. 10 PRINT "I ROCK AT BASIC!"
+20 GOTO 10
+
+bq. A block quotation.
+
+* A table, a chair, a bowl of fruit and a violin; what else does a man need to be happy?[1]
+* A table, a chair, a bowl of fruit and a violin; what else does a man need to be happy?[2]
+* A table, a chair, a bowl of fruit and a violin; what else does a man need to be happy?[3]
+* A table, a chair, a bowl of fruit and a violin; what else does a man need to be happy?[4]
+* A table, a chair, a bowl of fruit and a violin; what else does a man need to be happy?[5]
+* A table, a chair, a bowl of fruit and a violin; what else does a man need to be happy?[6]
+
+The original carver image: !http://i.imgur.com/bxtYJFy.jpg!
+
+fn1. "Albert Einstein":http://www.brainyquote.com/quotes/quotes/a/alberteins148867.html
+
+fn2. "Albert Einstein":http://www.brainyquote.com/quotes/quotes/a/alberteins148867.html
+
+fn3. "Albert Einstein":http://www.brainyquote.com/quotes/quotes/a/alberteins148867.html
+
+fn4. "Albert Einstein":http://www.brainyquote.com/quotes/quotes/a/alberteins148867.html
+
+fn5. "Albert Einstein":http://www.brainyquote.com/quotes/quotes/a/alberteins148867.html
+
+fn6. "Albert Einstein":http://www.brainyquote.com/quotes/quotes/a/alberteins148867.html
