--- a/source/portfolio/2014-03-23-something-like-this.html.textile
+++ b/source/portfolio/2014-03-23-something-like-this.html.textile
@@ -1,12 +1,14 @@
 ---
-title: "Something Like a Post"
+title: "Something Like This"
 tags:
   - sometag
   - Another Tag
   - something
   - else
 date: "2014-03-23"
-tooltip: "this is an article about Zen Buddhism"
+icon: "file-text-o"
+image: "http://placehold.it/350x150"
+summary: "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
 ---
 
 !http://placehold.it/350x150(Image)!
