Updated site to run off of one blog, removed portfolio blog structure, updated stubbed posts with meta data, added activities page

--- a/source/blog/2014-03-26-port-item-three.html.textile
+++ b/source/blog/2014-03-26-port-item-three.html.textile
@@ -1,8 +1,8 @@
 ---
-title: "Portfolio Item Two"
+title: "Portfolio Item Three"
 tags:
   - sometag
-date: "2014-03-21"
+date: "2014-03-26"
 image: "http://placehold.it/350x150"
 summary: "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
 icon: "picture-o"
