Updated the site with latest round of feedback

--- a/source/blog/2014-03-21-word.html.textile
+++ b/source/blog/2014-03-21-word.html.textile
@@ -4,7 +4,7 @@ tags:
   - sometag
 date: "2014-03-21"
 summary: "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-icon: "file-text"
+icon: "bullhorn"
 kind: activity
 ---
 
