--- a/source/blog/2014-03-27-port-item-four.html.textile
+++ b/source/blog/2014-03-27-port-item-four.html.textile
@@ -9,6 +9,8 @@ icon: "picture-o"
 kind: portfolio
 ---
 
+bc.. puts "This style (notice the double dot) handles blank lines."
+
 p. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam viverra urna a quam ornare iaculis. Aliquam a pulvinar elit. Nam nulla lacus, luctus sed sem non, eleifend euismod dui. Fusce sit amet egestas erat, eget tincidunt turpis. Cras sed odio dignissim, facilisis justo in, lobortis eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent mauris lacus, lacinia quis hendrerit in, volutpat ac leo. Morbi eget fermentum mi, non luctus purus. Suspendisse in tortor eu justo dictum tincidunt vitae ut leo.
 
 p. Nam tellus dui, porta et vulputate id, convallis a leo. Aliquam erat volutpat. Donec pulvinar eget mi non vulputate. Nullam porta ligula consectetur iaculis tincidunt. Donec ornare est quis elit euismod mattis. Maecenas sed mi at est posuere feugiat. Duis eget sollicitudin elit. Curabitur at consectetur massa. Pellentesque sem nibh, pretium at enim nec, aliquet dapibus lacus. Curabitur pretium mollis urna, sed rhoncus diam dapibus dignissim.
